@@ -66,6 +66,7 @@ public class DataflowCompiler {
 	private String name;
 	private DirectObservation context;
 	private IResolutionScope scope;
+	private Dataflow parentDataflow;
 
 	/*
 	 * keep the observables of each merged model to create proper references.
@@ -93,6 +94,8 @@ public class DataflowCompiler {
 		Coverage coverage;
 		IResolutionScope.Mode mode;
 		boolean isPartition = false;
+		// deferred resolution
+		boolean deferred = false;
 
 		/*
 		 * order of computation, relevant for scaling with partitioned resolvers
@@ -107,6 +110,7 @@ public class DataflowCompiler {
 			this.mode = link.getTarget().getMode();
 			this.order = link.getOrder();
 			this.isPartition = link.isPartition();
+			this.deferred = link.getTarget().isDeferred();
 		}
 
 		public String toString() {
@@ -114,10 +118,11 @@ public class DataflowCompiler {
 		}
 	}
 
-	public DataflowCompiler(String name, IResolutionScope scope) {
+	public DataflowCompiler(String name, IResolutionScope scope, Dataflow parentDataflow) {
 		this.name = name;
 		this.scope = scope;
 		this.context = (DirectObservation) scope.getContext();
+		this.parentDataflow = parentDataflow;
 	}
 
 	public Dataflow compile(IMonitor monitor) {
@@ -126,7 +131,7 @@ public class DataflowCompiler {
 			Graphs.show(resolutionGraph, "Resolution graph");
 		}
 
-		Dataflow ret = new Dataflow(monitor.getIdentity().getParentIdentity(ISession.class));
+		Dataflow ret = new Dataflow(monitor.getIdentity().getParentIdentity(ISession.class), parentDataflow);
 
 		ret.setName(this.name);
 		ret.setReferenceName(this.name);
@@ -279,6 +284,7 @@ public class DataflowCompiler {
 		Object inlineValue;
 		ResolvedArtifact resolvedArtifact;
 		Strategy strategy = Strategy.DIRECT;
+		List<Observable> deferredObservables = new ArrayList<>();
 
 		public String toString() {
 			return (root ? "ROOT " : "") + ("[" + children.size() + "]")
@@ -304,6 +310,9 @@ public class DataflowCompiler {
 
 				this.observable = (Observable) resolvable;
 				this.inlineValue = observable.getValue();
+//				if (this.observable.getDistributionContext() != null) {
+//					this.strategy = Strategy.DISTRIBUTION;
+//				}
 
 			} else if (resolvable instanceof Observer) {
 
@@ -329,28 +338,38 @@ public class DataflowCompiler {
 			 */
 			Actuator ret = Actuator.create(dataflow, mode);
 
-			boolean secondaryOutput = false;
-			boolean skipContextualization = false;
 			IObservable modelObservable = null;
 			if (!models.isEmpty()) {
 				modelObservable = models.iterator().next().model.getObservables().get(0);
-				if (modelObservable.getType().resolves(this.observable.getType()) < 0) {
+				if (!modelObservable.getType().resolves(this.observable.getType(), getDataflowContext())) {
 
+					/**
+					 * may be an attribute, in which case we already have the observation, nothing
+					 * is needed and we return null and get ignored.
+					 */
+					for (IObservable attribute : models.iterator().next().model.getAttributeObservables().values()) {
+						if (attribute.getType().resolves(this.observable.getType(), getDataflowContext())) {
+							return null;
+						}
+					}
 					/**
 					 * Secondary output! We may be already part of the actuator for this (in which
 					 * case we just add our empty actuator to create the observation and leave it to
 					 * the outer actuator) or we may not, in which case we must create the outer
 					 * actuator and put the empty actuator in it.
 					 */
-					secondaryOutput = true;
-					if (!(skipContextualization = generated.contains(models.iterator().next()))) {
+					if (!generated.contains(models.iterator().next())) {
 
 						Actuator child = Actuator.create(dataflow,
 								this.observable.is(IKimConcept.Type.COUNTABLE) ? Mode.INSTANTIATION : Mode.RESOLUTION);
 						child.setObservable(this.observable);
 						child.setName(observable.getReferenceName());
-						child.setAlias(models.iterator().next().model.getCompatibleOutput(observable).getName());
+						if (models.size() > 0) {
+							child.setAlias(models.iterator().next().model
+									.getCompatibleOutput(observable, getDataflowContext()).getName());
+						}
 						child.setType(this.observable.getArtifactType());
+						child.setExport(true);
 						child.setNamespace(((ResolutionScope) scope).getResolutionNamespace());
 						ret.actuators.add(child);
 
@@ -362,6 +381,7 @@ public class DataflowCompiler {
 			ret.setObservable(observable);
 			ret.setName(observable.getReferenceName());
 			ret.setAlias(observable.getName());
+			ret.getDeferredObservables().addAll(deferredObservables);
 
 			/*
 			 * FIXME this condition is silly; also there will be more problems due to this
@@ -379,40 +399,20 @@ public class DataflowCompiler {
 					ret.setType(Type.VOID);
 				} else {
 					/*
-					 * if not learning, we remove the inherency in the dataflow as it was needed to
-					 * resolve the inherent observable, but the model is run in an object's context
-					 * and we don't maintain the inherency when the semantics is local to the
-					 * object.
+					 * if not learning and not explicitly inherent, we remove the inherency in the
+					 * dataflow as it was needed to resolve the inherent observable, but the model
+					 * is run in an object's context and we don't maintain the inherency when the
+					 * semantics is local to the object.
 					 */
-					this.observable = (Observable) ObservableBuilder.getBuilder(this.observable, monitor)
-							.without(ObservableRole.CONTEXT).buildObservable();
+					ret.setObservable((Observable) ObservableBuilder.getBuilder(this.observable, monitor)
+							.without(ObservableRole.CONTEXT).buildObservable());
+
+					if (ret.getType() == null) {
+						assignType(ret, this.observable);
+					}
 				}
 			} else {
-
-				switch (observable.getDescription()) {
-				case CATEGORIZATION:
-					ret.setType(Type.CONCEPT);
-					break;
-				case DETECTION:
-				case INSTANTIATION:
-					ret.setType(observable.getArtifactType());
-					break;
-				case QUANTIFICATION:
-					ret.setType(Type.NUMBER);
-					break;
-				case SIMULATION:
-					ret.setType(Type.PROCESS);
-					break;
-				case VERIFICATION:
-					ret.setType(Type.BOOLEAN);
-					break;
-				case CHARACTERIZATION:
-				case CLASSIFICATION:
-					ret.setType(Type.VOID);
-					break;
-				default:
-					break;
-				}
+				assignType(ret, this.observable);
 			}
 
 			if (observer != null) {
@@ -420,7 +420,7 @@ public class DataflowCompiler {
 				ret.setNamespace(observer.getNamespace());
 				ret.setReferenceName(observer.getId());
 
-			} else if (resolvedArtifact != null /* && artifactAdapters == null */) {
+			} else if (resolvedArtifact != null) {
 				/*
 				 * Different situations if we ARE the artifact or we USE it for something. If we
 				 * have artifact adapters, we must compile an import as a child and use our own
@@ -445,8 +445,9 @@ public class DataflowCompiler {
 
 				ModelD theModel = models.iterator().next();
 				ret.setReferenceName(theModel.model.getObservables().get(0).getName());
-				defineActuator(ret, root ? observable.getName() : theModel.model.getLocalNameFor(observable), theModel,
-						generated);
+				defineActuator(ret,
+						root ? observable.getName() : theModel.model.getLocalNameFor(observable, getDataflowContext()),
+						theModel, generated);
 
 			} else if (this.hasPartitions) {
 
@@ -469,7 +470,7 @@ public class DataflowCompiler {
 
 					// rename and set the target name as partitioned. Number is the priority if
 					// known.
-					String name = modelDesc.model.getLocalNameFor(observable) + "_" + index;
+					String name = modelDesc.model.getLocalNameFor(observable, getDataflowContext()) + "_" + index;
 					partial.setPartitionedTarget(ret.getName());
 					partial.setName(name);
 					partial.setObservable(observable);
@@ -503,7 +504,64 @@ public class DataflowCompiler {
 				}
 			}
 
+			/*
+			 * if this is deferring observables, it's meant to create a trans-reified
+			 * quality, so wrap the dereified actuator into another that computes it for the
+			 * host context and set a dereifying contextualizer in it.
+			 * 
+			 * FIXME this shouldn't be a list. Ignoring any element > 1.
+			 */
+			if (deferredObservables.size() > 0) {
+
+				Observable dereified = (Observable) deferredObservables.get(0).getBuilder(monitor)
+						.of(observable.getType()).buildObservable();
+
+				Actuator outer = Actuator.create(dataflow,
+						dereified.is(IKimConcept.Type.COUNTABLE) ? Mode.INSTANTIATION : Mode.RESOLUTION);
+				outer.setObservable(dereified);
+				outer.setName(dereified.getName());
+				outer.setAlias(dereified.getName());
+				assignType(outer, dereified);
+
+				/*
+				 * add a dereifying contextualizer to the computation
+				 */
+				outer.addComputation(Klab.INSTANCE.getRuntimeProvider().getDereifyingResolver(observable.getType(),
+						deferredObservables.get(0).getType(), dereified.getArtifactType()));
+
+				outer.actuators.add(ret);
+				ret = outer;
+			}
+
 			return ret;
+		}
+
+		private void assignType(Actuator ret, Observable observable) {
+
+			switch (observable.getDescription()) {
+			case CATEGORIZATION:
+				ret.setType(Type.CONCEPT);
+				break;
+			case DETECTION:
+			case INSTANTIATION:
+				ret.setType(observable.getArtifactType());
+				break;
+			case QUANTIFICATION:
+				ret.setType(Type.NUMBER);
+				break;
+			case SIMULATION:
+				ret.setType(Type.PROCESS);
+				break;
+			case VERIFICATION:
+				ret.setType(Type.BOOLEAN);
+				break;
+			case CHARACTERIZATION:
+			case CLASSIFICATION:
+				ret.setType(Type.VOID);
+				break;
+			default:
+				break;
+			}
 		}
 
 		private void defineActuator(Actuator ret, String name, ModelD theModel, Set<ModelD> generated) {
@@ -511,7 +569,8 @@ public class DataflowCompiler {
 			Model model = theModel.model;
 			ret.setModel(model);
 
-			if (!generated.contains(theModel)) {
+			// filters are regenerated every time as their computation needs to be added
+			if (!generated.contains(theModel) || ret.isFilter()) {
 
 				generated.add(theModel);
 				for (IContextualizable resource : getModelComputation(model, ret.getType(), true)) {
@@ -538,19 +597,19 @@ public class DataflowCompiler {
 		 */
 		Actuator getActuatorTree(Dataflow dataflow, IMonitor monitor, Set<ModelD> generated, int level) {
 
-//			System.out.println(StringUtils.spaces(level * 3) + this);
-
 			Actuator ret = createActuator(dataflow, monitor, generated);
-			
+
+			if (ret == null) {
+				// no actuator needed: observation was predefined
+				return ret;
+			}
+
 			if (!ret.isReference()) {
 
-//				if (Units.INSTANCE.needsUnits(this.observable)) {
-//					System.out.println(StringUtils.spaces(level * 3) + "UNITS BEFORE:" + this.observable.getUnit()
-//							+ (this.observable.isFluidUnits() ? ", fluid" : ", fixed"));
-//				}
-
-				// collect units from dependent models to ensure consistency across unspecified
-				// ones
+				/*
+				 * collect units from dependent models to ensure consistency across unspecified
+				 * ones
+				 */
 				Map<String, IUnit> chosenUnits = new HashMap<>();
 
 				/*
@@ -579,13 +638,13 @@ public class DataflowCompiler {
 							observ.add(achild);
 						}
 					}
-					
+
 					if (observ.size() != 1) {
 						throw new KlabInternalErrorException("unexpected >1 observables in filtering actuator");
 					}
-					
+
 					ret.actuators.add(observ.get(0));
-					
+
 					for (Actuator filter : filters) {
 
 						/*
@@ -594,16 +653,12 @@ public class DataflowCompiler {
 						 * otherwise put it in here.
 						 */
 						for (IActuator dependency : filter.actuators) {
-							if (((Actuator)ret).hasDependency(dependency)) {
+							if (((Actuator) ret).hasDependency(dependency)) {
 								continue;
 							}
-//							if (!((Actuator) dependency).isReference() && existingActuators.containsKey(dependency.getName())
-//									&& !haveActuatorNamed(dependency.getName())) {
-//								dependency = ((Actuator) dependency).getReference();
-//							}
 							ret.actuators.add(dependency);
 						}
-//
+
 						// compile in all mediations as they are
 						for (Pair<IServiceCall, IContextualizable> mediator : filter.mediationStrategy) {
 							ret.mediationStrategy.add(mediator);
@@ -614,11 +669,11 @@ public class DataflowCompiler {
 						 * our filtered observable. These can only be filters by virtue of validation.
 						 */
 						for (Pair<IServiceCall, IContextualizable> computation : filter.computationStrategy) {
-							ret.computationStrategy.add(new Pair<>(ret.setFilteredArgument(computation.getFirst(), observ.get(0).getName()),
-									ret.setFilteredArgument(computation.getSecond(), observ.get(0).getName())));
+							ret.computationStrategy.add(
+									new Pair<>(ret.setFilteredArgument(computation.getFirst(), observ.get(0).getName()),
+											ret.setFilteredArgument(computation.getSecond(), observ.get(0).getName())));
 						}
 					}
-					
 
 				} else {
 
@@ -638,30 +693,23 @@ public class DataflowCompiler {
 						// this may be a new actuator or a reference to an existing one.
 						Actuator achild = child.getActuatorTree(dataflow, monitor, generated, level + 1);
 
-//						if (achild.isFilter()) {
-//
-//							ret.adoptFilter(achild, actuatorCatalog, monitor);
-//
-//						} else {
+						if (achild == null) {
+							// null if the observation is already there, i.e. it was an attribute
+							continue;
+						}
 
-							ret.getActuators().add(achild);
-							recordUnits(achild, chosenUnits);
-							if (sources.containsKey(achild.getName())) {
-								for (IContextualizable mediator : computeMediators(sources.get(achild.getName()),
-										achild.getObservable(), scale)) {
-									ret.addMediation(mediator, achild);
-								}
+						ret.getActuators().add(achild);
+						recordUnits(achild, chosenUnits);
+						if (sources.containsKey(achild.getName())) {
+							for (IContextualizable mediator : computeMediators(sources.get(achild.getName()),
+									achild.getObservable(), scale)) {
+								ret.addMediation(mediator, achild);
 							}
-//						}
+						}
 					}
 				}
 
 				inferUnits(ret, chosenUnits);
-
-//				if (Units.INSTANCE.needsUnits(this.observable)) {
-//					System.out.println(StringUtils.spaces(level * 3) + "UNITS AFTER:" + this.observable.getUnit()
-//							+ " using " + chosenUnits);
-//				}
 
 			}
 			return ret;
@@ -690,7 +738,7 @@ public class DataflowCompiler {
 
 					Model model = md.model;
 
-					modelObservable = model.getCompatibleOutput(ret.getObservable());
+					modelObservable = model.getCompatibleOutput(ret.getObservable(), getDataflowContext());
 					if (modelObservable == null) {
 						continue;
 					}
@@ -770,7 +818,7 @@ public class DataflowCompiler {
 
 		/*
 		 * sort by reverse refcount of model, so that actuators are always output before
-		 * any references to them. Ensure that filters are output last.
+		 * any references to them.
 		 */
 		private List<Node> sortChildren() {
 			List<Node> ret = new ArrayList<>(children);
@@ -778,14 +826,14 @@ public class DataflowCompiler {
 
 				@Override
 				public int compare(DataflowCompiler.Node o1, DataflowCompiler.Node o2) {
-					if (o1.observable.getFilteredObservable() != null
-							&& o2.observable.getFilteredObservable() == null) {
-						return 1;
-					}
-					if (o1.observable.getFilteredObservable() == null
-							&& o2.observable.getFilteredObservable() != null) {
-						return -1;
-					}
+//					if (o1.observable.getFilteredObservable() != null
+//							&& o2.observable.getFilteredObservable() == null) {
+//						return 1;
+//					}
+//					if (o1.observable.getFilteredObservable() == null
+//							&& o2.observable.getFilteredObservable() != null) {
+//						return -1;
+//					}
 					if (o2.models.isEmpty() && o1.models.isEmpty()) {
 						return 0;
 					}
@@ -848,9 +896,20 @@ public class DataflowCompiler {
 			IResolvable source = graph.getEdgeSource(d);
 
 			if (source instanceof IObservable) {
-				Set<ResolutionEdge> sources = graph.incomingEdgesOf(source);
-				if (sources.size() == 1) {
-					source = graph.getEdgeSource(sources.iterator().next());
+
+				if (d.deferred) {
+					/*
+					 * Add the additional resolution step to the node, to be merged into the
+					 * actuator.
+					 */
+					ret.deferredObservables.add((Observable) source);
+
+				} else {
+
+					Set<ResolutionEdge> sources = graph.incomingEdgesOf(source);
+					if (sources.size() == 1) {
+						source = graph.getEdgeSource(sources.iterator().next());
+					}
 				}
 			}
 
@@ -869,16 +928,13 @@ public class DataflowCompiler {
 
 				Model model = (Model) source;
 
-				Observable compatibleOutput = model.getCompatibleOutput(ret.observable);
+				Observable compatibleOutput = model.getCompatibleOutput(ret.observable, getDataflowContext());
 				if (compatibleOutput == null) {
 					// only happens when the observable is resolved indirectly
 					compatibleOutput = ret.observable;
 				} else {
 					compatibleOutput = new Observable(compatibleOutput);
 				}
-				// observableCatalog.put(compatibleOutput.getName(), compatibleOutput);
-
-				ret.strategy = model.getObservationStrategy();
 
 				ModelD md = compileModel(model, /* d.indirectAdapters, */ d.isPartition && honorPartitions);
 				for (ResolutionEdge o : graph.incomingEdgesOf(model)) {
@@ -895,10 +951,15 @@ public class DataflowCompiler {
 				}
 
 				ret.models.add(md);
+				ret.strategy = model.getObservationStrategy();
 			}
 		}
 
 		return ret;
+	}
+
+	public IConcept getDataflowContext() {
+		return this.context == null ? null : this.context.getObservable().getType();
 	}
 
 	/**
@@ -960,6 +1021,7 @@ public class DataflowCompiler {
 		if (resource.getClassification() != null || resource.getAccordingTo() != null) {
 			return Type.CONCEPT;
 		}
+
 		if (resource.getLookupTable() != null) {
 			return resource.getLookupTable().getLookupType();
 		}
@@ -1061,7 +1123,7 @@ public class DataflowCompiler {
 	public List<IContextualizable> computeMediators(Observable from, Observable to, IScale scale) {
 
 		if (OWL.INSTANCE.isSemantic(from)) {
-			if (!((Observable) to).canResolve((Observable) from)) {
+			if (to.getType().getSemanticDistance(from.getType()) < 0) {
 				throw new IllegalArgumentException(
 						"cannot compute mediators from an observable to another that does not resolve it: " + from
 								+ " can not mediate to " + to);
